# backend

./: .gitignore  Dockerfile  Makefile  README.md  app.py  default.env  docker-compose.yml  populate_db_initially.py  pyproject.toml  setup.cfg
resources/: models.py  routes.py  schemas.py
tests/: conftest.py  test_app.py
tests/books/: conftest.py  test_api.py
tests/waterfalls/: conftest.py  test_model.py
webapp/: __init__.py  __main__.py  config.py  main.py  searcher.py
webapp/repositories/: books.py
webapp/resources/: mock_db.json  models.py  routes.py  schemas.py
webapp/resources/routes/: routes.py
webapp/templates/: index.html
webapp/tests/: test_app.py
webapp/tools/db/: __main__.py  config.py  create_db.py  populate_db_initially.py  sql.py
